--- a/.github/ISSUE_TEMPLATE/gssoc25_contribution.yml
+++ b/.github/ISSUE_TEMPLATE/gssoc25_contribution.yml
@@ -57,7 +57,7 @@ body:
           required: true
         - label: I am a registered participant of GSSoC 2025.
           required: true
-        - label: I have starred the repository.
+        - label: I have starred the repository [Star_here](https://github.com/DhruvJohri/Netflix-Clone)
           required: true
         - label: I agree to follow the project's [Code of Conduct](https://github.com/DhruvJohri/Netflix-Clone/blob/main/CODE_OF_CONDUCT.md).
           required: true
